test_dev/qasm/syntax_errors/e26.qasm
// incomplete CX

gate cx a,b { CX }

